--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: OS2rollekatalog documentation
-description: This documentation aims to provide a clear and practical overview of how to operate, maintain, and troubleshoot OS2rollekatalog in a stable and secure way. The goal is to support system administrators and operations teams with the information needed for reliable day-to-day management and long-term sustainability.
+description: This documentation provides a comprehensive overview of how to use, maintain, and troubleshoot OS2rollekatalog in a secure and efficient manner. It aims to equip users, developers, and administrators with the necessary information for effective management and long-term support.
 theme: just-the-docs
 
 url: https://os2rollekatalog.github.io/OS2rollekatalog-docs/
